<resources>
    <string name="app_name">Github</string>
    <string name="login_username_hint">Username or email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="version">v1.0.0</string>
    <string name="author">Author</string>
    <string name="author_value">cncoderx</string>
    <string name="email">Email</string>
    <string name="email_value">wujie59585@163.com</string>
    <string name="homepage">Homepage</string>
    <string name="homepage_value">https://github.com/CNCoderX</string>
    <string name="no_name">No Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="following2">Following</string>
    <string name="followers2">Followers</string>
    <string name="news">News</string>
    <string name="users">Users</string>
    <string name="repositories">Repositories</string>
    <string name="organizations">Organizations</string>
    <string name="stars">Stars</string>
    <string name="gist">Gist</string>
    <string name="gists">Gists</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="members">Members</string>
    <string name="follow">Follow</string>
    <string name="search_hint">Search Github</string>
    <string name="zero">0</string>
    <string name="root">root</string>
    <string name="comments">Comments</string>
    <string name="star">Star</string>
    <string name="share">Share</string>
    <string name="no_desc">no description</string>
    <string name="unstar">Unstar</string>
    <string name="input_username_tips">Please input username or email address</string>
    <string name="input_password_tips">Please input password</string>
    <string name="login_failure">login failure</string>
    <string name="logout_confirm_again">Are you sure log out now?</string>
    <string name="clear_cache_confirm_again">Are you sure clear cache now?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="unfollow">Unfollow</string>
    <string name="home">Home</string>
    <string name="code">Code</string>
    <string name="issue">Issue</string>
    <string name="issues">Issues</string>
    <string name="pull_requests">Pulls</string>
    <string name="no_news">No News</string>
    <string name="no_repos">No Repositories</string>
    <string name="no_organs">No Organizations</string>
    <string name="no_members">No Members</string>
    <string name="no_stars">No Stars</string>
    <string name="no_gists">No Gists</string>
    <string name="no_issues">No Issues</string>
    <string name="no_pulls">No Pull Requests</string>
    <string name="no_files">No Files</string>
    <string name="no_bio">No Bio</string>
    <string name="search_no_result">We couldn’t find any repositories matching \'%1$s\'</string>
    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently">Recently</string>
    <string name="least_recently_updated">Least recently Updated</string>
    <string name="language">Language</string>
    <string name="language_value">English</string>
    <string name="default_lang">Default</string>
    <string name="just_now">just now</string>
    <string name="seconds_ago">%1$d seconds ago</string>
    <string name="minute_ago">a minute ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hour_age">an hour ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="day_ago">a day ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="month_ago">a month ago</string>
    <string name="months_ago">%1$d months ago</string>
    <string name="year_ago">a year ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="time_format">d MMM</string>
    <string name="time_format_full">d MMM yyyy</string>
    <string name="updated_on">Updated</string>
    <string name="created_on">Created</string>
    <string name="opened_on">Opened</string>
    <string name="token_invalid">Token invalid</string>
    <string name="network_error">Network error</string>
    <string name="starred">starred</string>
    <string name="event_msg_commented_on">commented on</string>
    <string name="event_msg_created">created</string>
    <string name="event_msg_deleted">deleted</string>
    <string name="event_msg_uploaded_file">uploaded a file to</string>
    <string name="event_msg_started_following">started following</string>
    <string name="event_msg_forked_repo">forked repository</string>
    <string name="event_msg_updated_wiki">updated the wiki in</string>
    <string name="event_msg_commented_issue">commented on issue</string>
    <string name="event_msg_on">on</string>
    <string name="event_msg_added">added</string>
    <string name="event_msg_as_collaborator">as a collaborator to</string>
    <string name="event_msg_open_sourced">open sourced repository</string>
    <string name="pull_request">pull request</string>
    <string name="event_msg_pushed_to">pushed to</string>
    <string name="event_msg_at">at</string>
    <string name="event_msg_to_team">to team</string>
    <string name="event_msg_starred">starred</string>
    <string name="creating_authorization">Creating authorization</string>
    <string name="requesting_profile">Requesting account profile</string>
    <string name="logging_in">Logging in</string>
    <string name="code_style">Code style</string>
    <string name="clear_cache">Clear cache</string>
    <string name="accounts">Accounts</string>
    <string name="theme_default">Default</string>
    <string name="theme_desert">Desert</string>
    <string name="theme_doxy">Doxy</string>
    <string name="theme_sons_of_obsidian">Sons of obsidian</string>
    <string name="theme_sunburst">Sunburst</string>
    <string name="clear_cache_finished">Clear cache finished</string>
    <string name="check_version">Check version</string>
    <string name="latest_version_toast">This is the latest version</string>
    <string name="enable_wrapping">Enable wrapping</string>
    <string name="disable_wrapping">Disable wrapping</string>
    <string name="theme">Theme</string>
    <string name="line_wrapping">Line wrapping</string>
    <string name="line_numbers">Line numbers</string>
    <string name="font_size">Font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
</resources>
